--- a/analysis_notebook.ipynb
+++ b/analysis_notebook.ipynb
@@ -436,6 +436,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Boxen Plot of iris data set - Common X axis\n",
     "This will display the boxen plot in the notebook and also save it to a file.\n",
@@ -485,6 +490,16 @@
     "    print(f\"Error generating box plot I : {return_code}\")\n",
     "else:\n",
     "    print(\"Box plot I generated successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kmeans Clustering of iris data set\n",
+    "This will display the kmeans clustering in the notebook and also save it to a file.\n",
+    "\n",
+    "https://www.datacamp.com/tutorial/k-means-clustering-python?utm_source=google&utm_medium=paid_search&utm_campaignid=19589720821&utm_adgroupid=157156374951&utm_device=c&utm_keyword=&utm_matchtype=&utm_network=g&utm_adpostion=&utm_creative=733936221293&utm_targetid=aud-1832882613722:dsa-2218886984380&utm_loc_interest_ms=&utm_loc_physical_ms=1007877&utm_content=&accountid=9624585688&utm_campaign=230119_1-sea~dsa~tofu_2-b2c_3-emea_4-prc_5-na_6-na_7-le_8-pdsh-go_9-nb-e_10-na_11-na&gad_source=1&gclid=Cj0KCQjwv_m-BhC4ARIsAIqNeBtcqQxamZLbu_HZzz-KqeYXnvGMhbiqEAkhefWZntcQgx3jKP1Yy2IaAuKgEALw_wcB"
    ]
   }
  ],
