Sum consmetic changes

--- a/analysis_notebook.ipynb
+++ b/analysis_notebook.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "9d46ca9a-0c6a-4587-9d79-6cbb7fba4995",
+       "ref": "ab2b919d-034d-46dd-9025-e6ac1eeb580b",
        "rows": [
         [
          "0",
@@ -349,7 +349,7 @@
        "4  Iris-setosa  sepal_length    5.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +412,8 @@
       "    # var_name is the new column name for the features\n",
       "    # value_name is the new column name for the values\n",
       "    logging.info(\"Converting DataFrame to metrics DataFrame\")\n",
+      "    # Melt is like a un-pivot operation\n",
+      "    # it takes the columns and turns them into rows\n",
       "    df_iris_melt = config['df'].melt(id_vars='species', var_name='feature', value_name='value')\n",
       "    config[\"df_iris_melt\"] = df_iris_melt\n",
       "    logging.info(\"Melt DataFrame shape: %s\", config[\"df_iris_melt\"].shape)\n",
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +510,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ddb08da3-796e-4d0a-9e29-be0a7f2c7f11",
+       "ref": "18db5d3b-f756-4a00-80f6-f6a9930e9bf3",
        "rows": [
         [
          "0",
@@ -680,7 +682,7 @@
        "4  Iris-versicolor  petal_length  4.26  3.0  5.1  0.47    4.35  4.00  4.60"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +737,7 @@
       "        - Logs an error if the resulting summary DataFrame is empty.\n",
       "        - Logs the shape, columns, and head of the summary DataFrame upon successful creation.\n",
       "    \"\"\"\n",
+      "    # local functions to calculate 25th and 75th quantiles\n",
       "    def quantile_25(x):\n",
       "        return np.quantile(x, 0.25)\n",
       "\n",
@@ -742,29 +745,24 @@
       "        return np.quantile(x, 0.75)\n",
       "    logging.info(\"Generating summary DataFrame\")\n",
       "    # Get dataframe from config\n",
-      "    if 'df' not in config:\n",
+      "    if 'df_iris_melt' not in config:\n",
       "        logging.error(\"DataFrame not in config\")\n",
       "        return -1\n",
-      "    # Get the dataframe from the config\n",
-      "\n",
-      "    df = config['df_iris_melt'].groupby(['species', 'feature'])['value'].agg(['mean', 'min', 'max', 'std', 'median',quantile_25 , quantile_75]).reset_index()\n",
       "    # Group by target and get the mean, min, max, std, median, 25th and 75th quantile\n",
-      "\n",
-      "    df = df.rename(columns={'mean': 'Mean', 'min': 'Min', 'max': 'Max', 'std': 'Std', 'median': 'Median', 'quantile_25': 'Q25', 'quantile_75': 'Q75'})\n",
-      "    # Create a new column with the feature name\n",
-      "    # round the values to 2 decimal places\n",
-      "    df['Mean'] = df['Mean'].round(2)\n",
-      "    df['Min'] = df['Min'].round(2)\n",
-      "    df['Max'] = df['Max'].round(2)\n",
-      "    df['Std'] = df['Std'].round(2)\n",
-      "    df['Median'] = df['Median'].round(2)\n",
-      "    df['Q25'] = df['Q25'].round(2)\n",
-      "    df['Q75'] = df['Q75'].round(2)\n",
-      "    # check if the dataframe is empty\n",
-      "    if df.empty:\n",
-      "        logging.error(\"DataFrame is empty\")\n",
-      "        return 1\n",
-      "    config['df_summary'] = df\n",
+      "    df_tmp = config['df_iris_melt'].groupby(['species', 'feature'])['value'].agg(['mean', 'min', 'max', 'std', 'median',quantile_25 , quantile_75]).reset_index()\n",
+      "    # Rename columns to something more user friendly\n",
+      "    df_tmp = df_tmp.rename(columns={'mean': 'Mean', 'min': 'Min', 'max': 'Max', 'std': 'Std', 'median': 'Median', 'quantile_25': 'Q25', 'quantile_75': 'Q75'})\n",
+      "    # round the values to 2 decimal places - it is easier to read \n",
+      "    # could do this on the display side , which may be better\n",
+      "    # but for now we will do it here\n",
+      "    df_tmp['Mean'] = df_tmp['Mean'].round(2)\n",
+      "    df_tmp['Min'] = df_tmp['Min'].round(2)\n",
+      "    df_tmp['Max'] = df_tmp['Max'].round(2)\n",
+      "    df_tmp['Std'] = df_tmp['Std'].round(2)\n",
+      "    df_tmp['Median'] = df_tmp['Median'].round(2)\n",
+      "    df_tmp['Q25'] = df_tmp['Q25'].round(2)\n",
+      "    df_tmp['Q75'] = df_tmp['Q75'].round(2)\n",
+      "    config['df_summary'] = df_tmp\n",
       "    logging.info(\"Summary DataFrame shape: %s\", config[\"df_summary\"].shape)\n",
       "    logging.info(\"Summary DataFrame columns: %s\", config[\"df_summary\"].columns)\n",
       "    logging.info(\"Summary DataFrame head: %s\", config[\"df_summary\"].head())\n",
@@ -789,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -891,27 +889,37 @@
       "    if 'df' not in config:\n",
       "        logging.error(\"DataFrame not in config\")\n",
       "        return -1\n",
-      "    with open(report_file, \"w\") as f:\n",
-      "        # write the header\n",
-      "        f.write(\"Analysis Report\\n\")\n",
-      "        f.write(\"===============\\n\")\n",
-      "        # write the dataframe to the file\n",
-      "        f.write(\"DataFrame\\n\")\n",
-      "        f.write(\"=========\\n\")\n",
-      "        f.write(f\"DataFrame Shape: {config['df'].shape}\\n\")\n",
-      "        f.write(f\"DataFrame Info: {config['df'].info}\\n\")\n",
-      "        f.write(f\"DataFrame Columns: {config['df'].columns}\\n\")\n",
-      "        f.write(f\"DataFrame Head: {config['df'].head()}\\n\")\n",
-      "        f.write(\"\\n\")\n",
-      "        # write the summary statistics to the file\n",
-      "        f.write(\"Summary Statistics\\n\")\n",
-      "        f.write(\"==================\\n\")\n",
-      "        f.write(config[\"df\"].describe().to_string())\n",
-      "    # Print out file - use in jupyter notebook\n",
+      "    # although the file is checked for existence above\n",
+      "    # there may be other errors that happen when either opening or writing to the file\n",
+      "    try:\n",
+      "        with open(report_file, \"w\") as f:\n",
+      "            # write the header\n",
+      "            f.write(\"Analysis Report\\n\")\n",
+      "            f.write(\"===============\\n\")\n",
+      "            # write the dataframe to the file\n",
+      "            f.write(\"DataFrame\\n\")\n",
+      "            f.write(\"=========\\n\")\n",
+      "            f.write(f\"DataFrame Shape: {config['df'].shape}\\n\")\n",
+      "            f.write(f\"DataFrame Info: {config['df'].info}\\n\")\n",
+      "            f.write(f\"DataFrame Columns: {config['df'].columns}\\n\")\n",
+      "            f.write(f\"DataFrame Head: {config['df'].head()}\\n\")\n",
+      "            f.write(\"\\n\")\n",
+      "            # write the summary statistics to the file\n",
+      "            f.write(\"Summary Statistics\\n\")\n",
+      "            f.write(\"==================\\n\")\n",
+      "            f.write(config[\"df\"].describe().to_string())\n",
+      "        # Print out file - use in jupyter notebook\n",
+      "    except OSError as e:\n",
+      "        logging.error(\"Error removing file %s: %s\", report_file, e)\n",
+      "        return -1\n",
       "    if to_console:\n",
       "        # print the report to the console\n",
-      "        with open(report_file, \"r\") as f:\n",
-      "            print(f.read())\n",
+      "        try:\n",
+      "            with open(report_file, \"r\") as f:\n",
+      "                print(f.read())\n",
+      "        except OSError as e:\n",
+      "            logging.error(\"Error reading file %s: %s\", report_file, e)\n",
+      "            return -1\n",
       "    logging.info(\"Report generated successfully\")\n",
       "    return 0\n",
       "\n"
@@ -936,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +963,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1084,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1194,7 @@
        "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
